--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,10 +3,10 @@ project(prompt)
 
 set(CMAKE_CXX_STANDARD 17)
 
-add_executable(prompt main.cpp)
+add_executable(saker-prompt main.cpp)
 
 add_subdirectory(include)
 include_directories(include)
 
-target_link_libraries(prompt saker)
+target_link_libraries(saker-prompt saker)
 
