content with basic functionality

--- a/include/CMakeLists.txt
+++ b/include/CMakeLists.txt
@@ -1,4 +1,4 @@
-add_library(saker saker.hpp saker/zone.hpp saker/prompt.hpp)
+add_library(saker saker.hpp saker/zone.hpp saker/prompt.hpp saker/content.hpp)
 
 add_library(rang rang.hpp)
 
