--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,17 +1,14 @@
-cmake_minimum_required(VERSION 3.16)#include <vector>
-#include <variant>
-#include <string>
-#include <ostream>
-#include <numeric>
-#include <algorithm>
+cmake_minimum_required(VERSION 3.16)
 project(prompt)
 
 set(CMAKE_CXX_STANDARD 17)
 
-add_executable(saker-prompt main.cpp)
+find_package(FunctionalPlus REQUIRED)
+
+add_executable(saker-prompt main.cpp userdata.hpp icons.hpp argh.hpp)
 
 add_subdirectory(include)
 include_directories(include)
 
-target_link_libraries(saker-prompt saker)
+target_link_libraries(saker-prompt saker FunctionalPlus::fplus)
 
